--- a/01-HTML/index.html
+++ b/01-HTML/index.html
@@ -25,7 +25,7 @@
     <section class="section">
       <h2>Agganyana</h2>
       <div class="contect">
-      <img src="/01-HTML/assets/a.jpg" alt="">
+      <img src="assets/images/a.jpg" alt="">
       </div>
       <p>I was born in kachin state, Moe nyine township Nanwinkone village.</p>
     </section>
