--- a/03-CSS-Selectors/Unsolved/index.html
+++ b/03-CSS-Selectors/Unsolved/index.html
@@ -14,19 +14,19 @@
 
     <main>
       <section>
-        <h2>About Me</h2>
+        <h2>Ashin Agganyana</h2>
         <figure>
-          <img src="./assets/images/image-1.jpg" alt="placeholder image with text reading 200 width 200 height"/>
+          <img src="./assets/images/a.jpg" alt="placeholder image with text reading 200 width 200 height"/>
           <figcaption>Student Image</figcaption>
         </figure>
-        <p class="highlighted-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+        <p class="highlighted-text">I was born in kachin state, Moe Hnyin Township, Indawgyi region, Nanwinkone Village, in Myanmar. Now I live in New Teipai in Thaiwan.</p>
       </section>
 
       <section id="contact-section">
         <h2>Contact Information</h2>
         <ul class="highlighted-text">
-          <li>Email: <a href="#">someplace@gmail.com</a></li>
-          <li>GitHub: <a href="#">sampleName</a></li>
+          <li>Email: <a href="http://agganyana3@gmail.com ">gmail.com</a></li>
+          <li>GitHub: <a href=" https://github.com/Min-Ya-Nant/Module-1.git"">minyanant</a></li>
           <li>Portfolio: <a href="#">coming soon</a></li>
         </ul>
         <br>
